@@ -8,6 +8,7 @@ New features:
      - 60 minutes
      - 6 hours
      - 12 hours
+ - custom flags
 
 Improvements & changes:
  - checking for report frequency optimization
